--- a/about-us.html
+++ b/about-us.html
@@ -83,41 +83,21 @@
 														</a>
 													</li>
 													<li class="dropdown dropdown-primary">
-														<a class="dropdown-toggle nav-link" href="expertise.html">
+														<a class="dropdown-toggle nav-link" href="#">
 															Missions
 														</a>
-														<!--ul class="dropdown-menu">
+														<ul class="dropdown-menu">
 															<li>
-																<a class="dropdown-item" href="expertise-detail.html">
-																	Corporate Finance
+																<a class="dropdown-item" href="accompagnement.html">
+																	Accompagnement
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="expertise-detail.html">
-																	Corporate Restructuring
+																<a class="dropdown-item" href="financement.html">
+																	Financement
 																</a>
 															</li>
-															<li>
-																<a class="dropdown-item" href="expertise-detail.html">
-																	Economic Consulting
-																</a>
-															</li>
-															<li>
-																<a class="dropdown-item" href="expertise-detail.html">
-																	Litigation Consulting
-																</a>
-															</li>
-															<li>
-																<a class="dropdown-item" href="expertise-detail.html">
-																	Strategic Consulting
-																</a>
-															</li>
-															<li>
-																<a class="dropdown-item" href="expertise-detail.html">
-																	Tech Consulting
-																</a>
-															</li>
-														</ul-->
+														</ul>
 													</li>
 													<li>
 														<a class="nav-link" href="cases.html">
@@ -180,7 +160,7 @@
 				<div class="container">
 					<div class="row pt-1 pb-4 mb-3">
 						<div class="col">
-							<ul>
+							<!-- <ul>
 								<li class="lead mb-4">Vous êtes jeune diplômé et vous avez des idées de projets très innovantes et à forte valeur ajoutée ;</li>
 								<li class="lead mb-4">Vous vous êtes récemment lancés ou vous souhaitez vous lancer dans un projet de création d'entreprise ? </li>
 								<li class="lead mb-4">Vous souhaitez vous entourer de l'expertise nécessaire et vous donner les moyens financiers
@@ -212,13 +192,13 @@
 								national (Porto Novo, Parakou, Lokossa, Abomey, Natitingou). Pour ceux qui ne pourront pas se dépla-
 								cer, nous avons prévu un accès par visioconférence afin de suivre l'événement et interagir en direct à
 								travers un lien qui leur sera communiqué à travers les réseaux sociaux LinkedIn @xxxxxxxx et Face-
-								book @yyyyyyyyyyy, auxquelles nous vous invitons à vous abonner. Veuillez également consulter le
+								book, auxquelles nous vous invitons à vous abonner. Veuillez également consulter le
 								site du programme FACS : https://www.entrepreneur-champion-facs.bj pour en savoir plus.</p>
 								<p>Cordialement,
 								Le Secrétariat Exécutif du FACS</p>
 
 								<div class="row pb-4">
-									<h3>Le programme FACS en Bref</h3>
+									<h3>Création d'entrepreneurs champions</h3>
 									<div class="col-lg-6">
 										<ul class="list list-icons list-icons-style-3 list-tertiary">
 											<li><i class="fas fa-chevron-right"></i> <b>POSITIONNEMENT</b><br>
@@ -233,32 +213,58 @@
 	amorçage (< 5 ans) ou en croissance (indifférent)
 											</li>
 										</ul>	
-									</div>
+									</div> -->
 									<!--div class="col-lg-4">
 										<ul class="list list-icons list-icons-style-3 list-tertiary">
 											<li><i class="fas fa-chevron-right"></i> Real Estate Professionals</li>
 											<li><i class="fas fa-chevron-right"></i> Chartered Financial Analysts</li>
 										</ul>
 									</div-->
-									<div class="col-lg-6">
-										<ul class="list list-icons list-icons-style-3 list-tertiary">
-											<li><i class="fas fa-chevron-right"></i> 
-												<b>INSTRUMENT D'INTERVENTION</b><br>
-												<ul>
-													<li>Investissement en fonds propres et quasi-fonds propres</li>
-													<li>Start up ( 1 à 5 millions) - amorçage (5 à 30 millions) - croissance (jusqu'à 200 millions)</li>
-												</ul>
-											</li>
-											<li><i class="fas fa-chevron-right"></i> 
-												<b>DUREE D'INVESTISSEMENT</b><br>
-												<ul>
-													<li>Pas de durée de référence – en moyenne entre 5 et 6 ans</li>
-													<li>Sortie dès que possible au profit des Entrepreneurs ; d'un fonds d'investisse-
-														ment ; d'un opérateur stratégique ou sur le marché</li>
-												</ul>
-											</li>
+									<div class="row pb-4">
+										<p>Le Fonds d'Appui Catalytique et de Solidarité (FACS), est un programme d'accompagnement et de financement des entreprises, co-créé par la Chambre de Commerce et d'Industrie du Bénin (CCI Bénin) et la Caisse des Dépôts et de Consignations du Bénin (CDC Bénin) pour apporter une solution à la difficulté d'accès au financement des entreprises innovantes et à forte valeur ajoutée</p>
+										<p>De façon spécifique, le FACS vise à</p>
+										<ul class="ps-5">
+											<li>procurer un accompagnement financier à risque aux fins de contribuer, de façon  plus efficace au développement entrepreneurial, en particulier à l'éclosion des startup, des entrepreneurs champions et des entreprises performante et pérennes ;</li>
+											<li>mettre en place et fournir une assistance technique (vision stratégique, organisation idoine, création d'un écosystème favorable, financement adapté, etc) dès la sélection d'un projet innovant et prometteur ;</li>
+											<li>promouvoir le financement privé à risque des porteurs de projets, PME, startup, sur le plan national avec une priorité pour les secteurs du numérique, de la transformation de produits agricole, de l'innovation, et de l'industrie légère, etc. ;</li>
+											<li>financer des projets structurés et innovants portés par des start up que par des entreprises déjà établies, en amorçage ou en croissance et les accompagner pour la levée de financements complémentaires adaptés à leur besoin.</li>
+											<li>construire des relations avec les souscripteurs, donateurs, partenaires et différentes parties prenantes et,  à ce titre,  faciliter le dialogue avec ces derniers.</li>
 										</ul>
-									</div>
+										<h3>Création d'entrepreneurs champions</h3>
+										<div class="col-lg-6">
+											<ul class="list list-icons list-icons-style-3 list-tertiary">
+												<li><i class="fas fa-chevron-right"></i> <b>POSITIONNEMENT</b><br>
+													Le Fonds d'Appui Catalytique et de Solidarité est un programme d'accompagnement
+													et de financement :
+													<ul>
+														<li>d'entreprises innovantes (start up), en amorçage ou en croissance;</li>
+														<li>de projets ambitieux et à fort potentiel de croissance dans les secteurs de l'agriculture de la petite industrie et des services aux Bâtiments et Travaux Publics</li></ul></li>
+												<li><i class="fas fa-chevron-right"></i>
+													<b>MODE D'INTERVENTION</b><br>
+													Prise de participation dans des sociétés— projets au stade de création (< 1an) ou en
+													amorçage (< 5 ans) ou en croissance (indifférent)
+												</li>
+											</ul>	
+										</div>
+										<div class="col-lg-6">
+											<ul class="list list-icons list-icons-style-3 list-tertiary">
+												<li><i class="fas fa-chevron-right"></i> 
+													<b>INSTRUMENT D'INTERVENTION</b><br>
+													<ul>
+														<li>Investissement en fonds propres et quasi-fonds propres</li>
+														<li>Start up ( 1 à 5 millions) - amorçage (5 à 30 millions) - croissance (jusqu'à 200 millions)</li>
+													</ul>
+												</li>
+												<li><i class="fas fa-chevron-right"></i> 
+													<b>DUREE D'INTERVENTION</b><br>
+													<ul>
+														<li>Pas de durée de référence – en moyenne entre 5 et 6 ans</li>
+														<li>Sortie dès que possible au profit des Entrepreneurs ; d'un fonds d'investisse-
+															ment ; d'un opérateur stratégique ou sur le marché</li>
+													</ul>
+												</li>
+											</ul>
+										</div>
 								</div>
 						</div>
 					</div>
