--- a/accompagnement.html
+++ b/accompagnement.html
@@ -137,25 +137,50 @@
 					</div>
 				</div>
 			</header>
-
+			
 			<div role="main" class="main">
 
-				<section class="page-header page-header-modern bg-dark page-header-md custom-page-header">
+				<section class="page-header page-header-modern bg-color-quaternary page-header-md custom-page-header">
 					<div class="container">
 						<div class="row mt-3">
 							<div class="col-md-8 order-2 order-md-1 align-self-center p-static">
-								<h1>Financement</h1>
-								<span class="d-block text-4">Postuler pour un financement</span>
+								<h1>- Accompagnement</h1>
+								<!-- <span class="d-block text-4">CEO &amp Founder</span> -->
 							</div>
 							<div class="col-md-4 order-1 order-md-2 align-self-center">
 								<ul class="breadcrumb d-block text-md-end breadcrumb-light">
 									<li><a href="index.html">Accueil</a></li>
-									<li class="active">Financement</li>
+									<li><a href="expertise.html">Missions</a></li>
+									<li class="active">Accompagnement</li>
 								</ul>
 							</div>
 						</div>
 					</div>
 				</section>
+
+				<div class="container">
+					<div class="row pt-1 pb-4 mb-3">
+						<div class="col">
+							<div class="row mt-4">
+								<div class="col">
+                                    <p>A l'issue de la phase de présélection (avant le comité d'investissement), nous accompagnons les Entrepreneurs dans le renforcement de leur projet et construisons ensemble une feuille de route opérationnelle et stratégique. L'accompagnement est composé de plusieurs types d'appuis techniques et stratégiques dont notamment</p>
+                                    <ul class="list list-icons list-icons-style-3 list-tertiary p-2">
+                                        <li><i class="fas fa-chevron-right"></i> Affinement du Plan d'Affaires intégrant le contrôle de qualité des hypothèses et données de base des projections et de l'analyse des risques ;</li>
+                                        <li><i class="fas fa-chevron-right"></i> Structuration d'un financement adapté et mise en place d'un mécanisme de décaissement flexible permettant d'allier les intérêts du promoteur et des actionnaires ;</li>
+                                        <li><i class="fas fa-chevron-right"></i> Recherche de financement complémentaire sans exigence de caution et de subvention, le cas échéant ;</li>
+                                        <li><i class="fas fa-chevron-right"></i> Assistance des entreprises sur les problématiques relatives au pilotage opérationnel adéquat ;</li>
+                                        <li><i class="fas fa-chevron-right"></i> Identification permanente des opportunités/relais de croissance et solutions de mitigation des risques ;</li>
+                                        <li><i class="fas fa-chevron-right"></i> Mise à disposition d'experts dédiés selon la(les) problématiques à résoudre ;</li>
+                                        <li><i class="fas fa-chevron-right"></i> Mise à disposition d'experts dédiés (dans un rôle de conseiller opérationnel) et participation au conseil d'administration ;</li>
+                                        <li><i class="fas fa-chevron-right"></i> Introduction de Best Practices et aide à la mise en place d'outils de reporting et de gestion adaptés ;</li>
+                                        <li><i class="fas fa-chevron-right"></i> Veille technologiques et règlementaires ;</li>
+                                        <li><i class="fas fa-chevron-right"></i> Etc.</li>
+                                    </ul>
+                                </div>
+							</div>
+						</div>
+					</div>
+				</div>
 
 				<section class="section section-text-light section-background m-0" style="background: url('img/gallery/wp.png'); background-size: cover;">
 					<div class="container">
