--- a/index.html
+++ b/index.html
@@ -88,41 +88,21 @@
 														</a>
 													</li>
 													<li class="dropdown dropdown-primary">
-														<a class="dropdown-toggle nav-link" href="expertise.html">
+														<a class="dropdown-toggle nav-link" href="#">
 															Missions
 														</a>
-														<!--ul class="dropdown-menu">
+														<ul class="dropdown-menu">
 															<li>
-																<a class="dropdown-item" href="expertise-detail.html">
-																	Corporate Finance
+																<a class="dropdown-item" href="accompagnement.html">
+																	Accompagnement
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="expertise-detail.html">
-																	Corporate Restructuring
+																<a class="dropdown-item" href="financement.html">
+																	Financement
 																</a>
 															</li>
-															<li>
-																<a class="dropdown-item" href="expertise-detail.html">
-																	Economic Consulting
-																</a>
-															</li>
-															<li>
-																<a class="dropdown-item" href="expertise-detail.html">
-																	Litigation Consulting
-																</a>
-															</li>
-															<li>
-																<a class="dropdown-item" href="expertise-detail.html">
-																	Strategic Consulting
-																</a>
-															</li>
-															<li>
-																<a class="dropdown-item" href="expertise-detail.html">
-																	Tech Consulting
-																</a>
-															</li>
-														</ul-->
+														</ul>
 													</li>
 													<li>
 														<a class="nav-link" href="cases.html">
@@ -173,24 +153,33 @@
 									<div class="row align-items-center pb-5 h-100">
 										<div class="col">
 											<h1 class="custom-secondary-font text-color-light font-weight-extra-bold text-8 line-height-1 line-height-sm-3 mb-5 appear-animation" data-appear-animation="fadeInLeftShorterPlus" data-appear-animation-delay="500" data-plugin-options="{'minWindowWidth': 0}">Accompagnement<br><span class="custom-secondary-font text-4-5">D'entrepreneurs</span></h1>
-											<a href="#" class="btn btn-primary btn-modern font-weight-bold text-2 py-3 btn-px-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800">COMMENCER</a>
+											<a href="about-us.html" class="btn btn-primary btn-modern font-weight-bold text-2 py-3 btn-px-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800">COMMENCER</a>
 										</div>
 									</div>
 								</div>
 							</div>
-
+							<!-- Carousel Slide  -->
+							<div class="sdw-inset owl-item position-relative pt-5" style="background-image: url(img/APC_5317.jpg); background-size: cover; background-position: center;">
+								<div class="container position-relative z-index-3 pb-5 h-100">
+									<div class="row align-items-center pb-5 h-100">
+										<div class="col">
+											<h1 class="custom-secondary-font text-color-light font-weight-extra-bold text-8 line-height-1 line-height-sm-3 mb-5 appear-animation" data-appear-animation="fadeInLeftShorterPlus" data-appear-animation-delay="500" data-plugin-options="{'minWindowWidth': 0}">Appel à candidature<br><span class="custom-secondary-font text-4-5">C'est le moment de vous lancer</span></h1>
+											<a href="about-us.html" class="btn btn-primary btn-modern font-weight-bold text-2 py-3 btn-px-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800">COMMENCER</a>
+										</div>
+									</div>
+								</div>
+							</div>
 							<!-- Carousel Slide 2 -->
 							<div class="sdw-inset owl-item position-relative pt-5" style="background-image: url(img/APC_5395.jpg); background-size: cover; background-position: center;">
 								<div class="container position-relative z-index-3 pb-5 h-100">
 									<div class="row align-items-center pb-5 h-100">
 										<div class="col">
 											<h1 class="custom-secondary-font text-color-light font-weight-extra-bold text-8 line-height-1 line-height-sm-3 mb-5 appear-animation" data-appear-animation="fadeInLeftShorterPlus" data-appear-animation-delay="500" data-plugin-options="{'minWindowWidth': 0}">Financement<br><span class="custom-secondary-font text-4-5">Projets Ambitieux</span></h1>
-											<a href="#" class="btn btn-primary btn-modern font-weight-bold text-2 py-3 btn-px-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800">COMMENCER</a>
+											<a href="about-us.html" class="btn btn-primary btn-modern font-weight-bold text-2 py-3 btn-px-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800">COMMENCER</a>
 										</div>
 									</div>
 								</div>
 							</div>
-
 
 						</div>
 					</div>
@@ -237,12 +226,15 @@
 						<div class="row">
 							<div class="col-md-6 col-lg-6">
 								<h2 class="font-weight-bold text-color-dark">Fonds d'Appui Catalytique et de Solidarité</h2>
-								<p class="ps-4">Le Fonds d'Appui Catalytique et de Solidarité (FACS), un programme de financement et d 'accompagne-
+								<!-- <p class="ps-4">Le Fonds d'Appui Catalytique et de Solidarité (FACS), un programme de financement et d 'accompagne-
 									ment des entrepreneur(e)s créé par la Chambre de Commerce et d'Industrie du Bénin (CCI Bénin) et la
 									Caisse des Dépôts et de Consignations du Bénin (CDC Bénin) vous apporte la solution.
 									Le FACS a pour objectif de faire émerger une nouvelle génération d'entrepreneurs champions, capables
 									de développer des entreprises à forte valeur ajoutée et de catalyser la transformation productive de
-									l'économie béninoise.</p>
+									l'économie béninoise.
+								</p> -->
+								<p class="ps-4">Le FACS a pour objectif de promouvoir et faire émerger une nouvelle génération d'entrepreneurs, champions, capables de développer des entreprises performantes dans leur secteur d'activités pour catalyser la transformation productive de l'économie béninoise.</p>
+								<p class="ps-4">Il repose sur deux piliers à savoir:  un accompagnement à la création des conditions de réussite et un financement adapté au besoin effectif.</p>
 								<div class="ps-4">
 									<!--div class="row">
 										<div class="col-lg-6">
@@ -320,27 +312,29 @@
 						</div>
 						<div class="row">
 							<div class="col-lg-6">
-								<a href="expertise-detail.html" class="text-decoration-none appear-animation" data-appear-animation="fadeInUp" data-appear-animation-delay="0">
+								<a href="accompagnement.html" class="text-decoration-none appear-animation" data-appear-animation="fadeInUp" data-appear-animation-delay="0">
 									<div class="feature-box custom-feature-box feature-box-style-2">
 										<div class="feature-box-icon">
 											<img src="img/avatars/avatar-money.png" alt="">
 										</div>
 										<div class="feature-box-info ms-3">
-											<h4 class="font-weight-normal text-5">Accompanement</h4>
-											<p class="text-2">Le FACS offre un accompagnement complet aussi bien en phase de pré investissement, qu'en phase d'investissement, avec l'appui d'experts, qui apporteront une assistance technique à l'amélioration et l'optimisation des plans d'affaires, l'analyse et l'atténuation des risques, la création d'un écosystème favorable, ainsi qu'au pilotage opérationnel.</p>
+											<h4 class="font-weight-normal text-5">Accompagnement</h4>
+											<!-- <p class="text-2">Le FACS offre un accompagnement complet aussi bien en phase de pré investissement, qu'en phase d'investissement, avec l'appui d'experts, qui apporteront une assistance technique à l'amélioration et l'optimisation des plans d'affaires, l'analyse et l'atténuation des risques, la création d'un écosystème favorable, ainsi qu'au pilotage opérationnel.</p> -->
+											<p class="text-2">A l'issue de la phase de présélection (avant le comité d'investissement), nous accompagnons les Entrepreneurs dans le renforcement de leur projet et construisons ensemble une feuille de route opérationnelle et stratégique. L'accompagnement est composé de plusieurs types d'appuis techniques et stratégiques dont notamment</p>
 										</div>
 									</div>
 								</a>
 							</div>
 							<div class="col-lg-6">
-								<a href="expertise-detail.html" class="text-decoration-none appear-animation" data-appear-animation="fadeInUp" data-appear-animation-delay="100">
+								<a href="financement.html" class="text-decoration-none appear-animation" data-appear-animation="fadeInUp" data-appear-animation-delay="100">
 									<div class="feature-box custom-feature-box feature-box-style-2">
 										<div class="feature-box-icon">
 											<img src="img/avatars/avatar-money.png" alt="">
 										</div>
 										<div class="feature-box-info ms-3">
 											<h4 class="font-weight-normal text-5">Financement</h4>
-											<p class="text-2">Le FACS financera les projets à forte valeur ajoutée jusqu'à trois cent millions (300.000.000) de FCFA en fonds propres et quasi-fonds propres, étalé sur toute la durée d'investissement, et favorisera un effet levier permettant d'assurer les besoins d'investissements futurs et prédictibles de la société, sous réserve de l'atteinte d'objectifs déterminés ou de la réalisation des conditions suspensives.</p>
+											<!-- <p class="text-2">Le FACS financera les projets à forte valeur ajoutée jusqu'à trois cent millions (300.000.000) de FCFA en fonds propres et quasi-fonds propres, étalé sur toute la durée d'investissement, et favorisera un effet levier permettant d'assurer les besoins d'investissements futurs et prédictibles de la société, sous réserve de l'atteinte d'objectifs déterminés ou de la réalisation des conditions suspensives.</p> -->
+											<p class="text-2">Le financement se fait sous la forme d'Investissement en fonds propres et quasi-fonds propres jusqu'à hauteur de deux cents millions (200.000.000) de francs CFA.</p>
 										</div>
 									</div>
 								</a>
@@ -620,7 +614,7 @@
 									</span>
 									<span class="thumb-info-caption bg-color-secondary p-4 pt-5 pb-5">
 										<span class="custom-thumb-info-title">
-											<span class="custom-thumb-info-name font-weight-semibold text-color-dark text-4">Accompagnement pré invest</span>
+											<span class="custom-thumb-info-name font-weight-semibold text-color-dark text-4">Accompagnement pré-invest</span>
 										</span>
 										<!-- <span class=""><i class="fas fa-arrow-circle-right"></i></span> -->
 
