--- a/expertise.html
+++ b/expertise.html
@@ -83,41 +83,21 @@
 														</a>
 													</li>
 													<li class="dropdown dropdown-primary">
-														<a class="dropdown-toggle nav-link" href="expertise.html">
+														<a class="dropdown-toggle nav-link" href="#">
 															Missions
 														</a>
-														<!--ul class="dropdown-menu">
+														<ul class="dropdown-menu">
 															<li>
-																<a class="dropdown-item" href="expertise-detail.html">
-																	Corporate Finance
+																<a class="dropdown-item" href="accompagnement.html">
+																	Accompagnement
 																</a>
 															</li>
 															<li>
-																<a class="dropdown-item" href="expertise-detail.html">
-																	Corporate Restructuring
+																<a class="dropdown-item" href="financement.html">
+																	Financement
 																</a>
 															</li>
-															<li>
-																<a class="dropdown-item" href="expertise-detail.html">
-																	Economic Consulting
-																</a>
-															</li>
-															<li>
-																<a class="dropdown-item" href="expertise-detail.html">
-																	Litigation Consulting
-																</a>
-															</li>
-															<li>
-																<a class="dropdown-item" href="expertise-detail.html">
-																	Strategic Consulting
-																</a>
-															</li>
-															<li>
-																<a class="dropdown-item" href="expertise-detail.html">
-																	Tech Consulting
-																</a>
-															</li>
-														</ul-->
+														</ul>
 													</li>
 													<li>
 														<a class="nav-link" href="cases.html">
