--- a/financement.html
+++ b/financement.html
@@ -137,25 +137,57 @@
 					</div>
 				</div>
 			</header>
-
+			
 			<div role="main" class="main">
 
-				<section class="page-header page-header-modern bg-dark page-header-md custom-page-header">
+				<section class="page-header page-header-modern bg-color-quaternary page-header-md custom-page-header">
 					<div class="container">
 						<div class="row mt-3">
 							<div class="col-md-8 order-2 order-md-1 align-self-center p-static">
-								<h1>Financement</h1>
-								<span class="d-block text-4">Postuler pour un financement</span>
+								<h1>- Financement</h1>
+								<!-- <span class="d-block text-4">CEO &amp Founder</span> -->
 							</div>
 							<div class="col-md-4 order-1 order-md-2 align-self-center">
 								<ul class="breadcrumb d-block text-md-end breadcrumb-light">
 									<li><a href="index.html">Accueil</a></li>
+									<li><a href="expertise.html">Missions</a></li>
 									<li class="active">Financement</li>
 								</ul>
 							</div>
 						</div>
 					</div>
 				</section>
+
+				<div class="container">
+					<div class="row pt-1 pb-4 mb-3">
+						<div class="col">
+							<div class="row mt-4">
+								<div class="col">
+                                    <p>Le financement se fait sous la forme d'Investissement en fonds propres et quasi-fonds propres jusqu'à hauteur de deux cents millions (200.000.000) de francs CFA</p>
+                                    <ul class="list list-icons list-icons-style-3 list-tertiary p-2">
+                                        <li>
+                                            <i class="fas fa-chevron-right"></i> Les règles de gouvernance seront explicitées dans le cadre d'un Pacte d'Actionnaires qui comportera
+                                            <ul style="list-style-type:lower-roman;">
+                                                <li>des clauses relatives à la gestion de la Société ;</li>
+                                                <li>des clauses relatives à l'actionnariat et aux cessions de titres ;</li>
+                                                <li>des clauses relatives à la sortie d'un actionnaire et ;</li>
+                                                <li>des clauses relatives à la rupture du pacte.</li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <i class="fas fa-chevron-right"></i> 2 organes de gouvernance conférant à CDC Bénin un rôle de minoritaire influent, permettant d'apporter toute l'assistance et l'expertise d'investisseurs au bénéfice des Entrepreneurs. Il s'agit notamment de : 
+                                            <ul>
+                                                <li>Le Conseil d'Administration ou équivalent</li>
+                                                <li>Un comité matérialisant le mécanisme de suivi, qui sera mis en place en concertation avec le promoteur</li>
+                                            </ul>
+                                        </li>
+                                        <li><i class="fas fa-chevron-right"></i> dentification sur toute la durée d'investissement de relais de croissance (diversification du portefeuille produits/services, nouveaux marchés géographiques, croissance externe)</li>
+                                    </ul>
+                                </div>
+							</div>
+						</div>
+					</div>
+				</div>
 
 				<section class="section section-text-light section-background m-0" style="background: url('img/gallery/wp.png'); background-size: cover;">
 					<div class="container">
